Needs to fix properties controller