@@ -1,23 +1,38 @@
 package za.co.bbd.atc.propertymanagement.converter.user;
 
+import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Component;
-import za.co.bbd.atc.propertymanagement.entity.user.PhoneNumberEntity;
 import za.co.bbd.atc.propertymanagement.dto.user.PhoneNumberDTO;
+import za.co.bbd.atc.propertymanagement.entity.user.PhoneNumberEntity;
+import za.co.bbd.atc.propertymanagement.repository.PhoneNumberRepository;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Component
+@RequiredArgsConstructor
 public class PhoneNumberConverter {
+
+    private final PhoneNumberRepository phoneNumberRepository;
+
     public PhoneNumberEntity convertDTOtoEntity (PhoneNumberDTO phoneNumberDTO) {
-        PhoneNumberEntity entity = new PhoneNumberEntity();
-        entity.setCountryCode(phoneNumberDTO.getCountryCode());
-        entity.setPhoneNumber(phoneNumberDTO.getPhoneNumber());
+        PhoneNumberEntity entity = phoneNumberRepository
+                .findPhoneNumberEntityByCountryCodeAndPhoneNumber(
+                        phoneNumberDTO.getCountryCode(), phoneNumberDTO.getPhoneNumber()
+                );
+        if (null == entity) {
+            entity = new PhoneNumberEntity();
+            entity.setCountryCode(phoneNumberDTO.getCountryCode());
+            entity.setPhoneNumber(phoneNumberDTO.getPhoneNumber());
+        }
+
         return entity;
     }
 
     public List<PhoneNumberEntity> convertDTOlistToEntityList(List<PhoneNumberDTO> phoneNumberDTOList) {
-        return phoneNumberDTOList.stream().map(this::convertDTOtoEntity).toList();
+        return phoneNumberDTOList.stream().map(this::convertDTOtoEntity).collect(Collectors.toList());
     }
 
     public PhoneNumberDTO convertEntityToDTO(PhoneNumberEntity phoneNumberEntity) {
@@ -28,7 +43,11 @@ public class PhoneNumberConverter {
     }
 
     public List<PhoneNumberDTO> convertEntityListToDTOlist(List<PhoneNumberEntity> phoneNumberEntityList) {
-        if (null == phoneNumberEntityList) return new ArrayList<>();
-        return phoneNumberEntityList.stream().map(this::convertEntityToDTO).toList();
+         return Optional
+                 .ofNullable(phoneNumberEntityList)
+                 .orElse(new ArrayList<>())
+                 .stream()
+                 .map(this::convertEntityToDTO)
+                 .collect(Collectors.toList());
     }
 }
